# Satellites

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
